added close control in html

--- a/src/sfu/WebexMeet/app/views/chat.ejs
+++ b/src/sfu/WebexMeet/app/views/chat.ejs
@@ -55,5 +55,6 @@
   <% include ./parts/footer.ejs %>
 
   <script src="/js/scriptForChat.js"></script>
+  <script src="/js/webrtc.js" async></script>
 </body>
 </html>
