--- a/src/sfu/WebexMeet/app/views/chat.ejs
+++ b/src/sfu/WebexMeet/app/views/chat.ejs
@@ -11,7 +11,23 @@
   <div > <ul id="hell0" class="list-unstyled">
 
   </ul> </div>
-</div></div>
+</div>
+<div>
+
+  <table>
+    <tr id="TRSubscribe">
+      <td>
+        <div id="divPeerid"></div>
+        <!--        <video id="local_video" controls autoplay playsinline></video>-->
+        <div id="local_video"> </div>
+      </td>
+    </tr>
+
+  <table>
+
+</div>
+
+</div>
 <hr><br>
   <main>
     <div class="container-fluid">
@@ -54,7 +70,7 @@
 
   <% include ./parts/footer.ejs %>
 
-  <script src="/js/scriptForChat.js"></script>
-  <script src="/js/webrtc.js" async></script>
+  <script src="/js/scriptForChat.js" async></script>
+<!--   <script src="/js/webrtc.js" async></script> -->
 </body>
 </html>
