removed sequence and duration to make it work at firefox

--- a/src/broadcast/signalserver/client-datachannel/css/main.css
+++ b/src/broadcast/signalserver/client-datachannel/css/main.css
@@ -2,11 +2,11 @@ body {
   font-family: sans-serif;
 }
 
-video {
+/*video {
   max-width: 100%;
   width: 320px;
 }
-
+*/
 
 div.a {
   font-size: 15px;
