--- a/src/broadcast/signalserver/codelab/css/videostyle.css
+++ b/src/broadcast/signalserver/codelab/css/videostyle.css
@@ -1,4 +1,4 @@
-body{width:100%;height:70%;overflow:hidden;background:#eee;}
+body{width:100%;height:70%;overflow:hidden;background:#eee;margin: 0px;}
 /* #hlsStreamSection{background:#eee;width:100%;height:100%;overflow:hidden;} */
 /* #hlsStreamSection{background:#eee;} */
 #hlsStreamSection span{font-size:20px;color:#666;display:block;padding:2em;position:relative;}
