--- a/src/broadcast/signalserver/codelab/css/videostyle.css
+++ b/src/broadcast/signalserver/codelab/css/videostyle.css
@@ -2,7 +2,7 @@ body{width:100%;height:70%;overflow:hidden;background:#eee;margin: 0px;}
 /* #hlsStreamSection{background:#eee;width:100%;height:100%;overflow:hidden;} */
 /* #hlsStreamSection{background:#eee;} */
 #hlsStreamSection span{font-size:20px;color:#666;display:block;padding:2em;position:relative;}
-video{width:100%;height:84vh;top:0;left:0;position:relative;}
+video{width:100%;height:84vh;top:0;left:0;position:relative;margin-top: 1px;}
 #controls{position:relative;}
 /* #controls{position:relative;width:400px;bottom:0px;left:50%;transform:translateX(-50%)} */
 #change{display: flex;flex-direction: row;justify-content: center;}
@@ -50,6 +50,13 @@ a {
 		visibility: hidden;
 	}
 }
+
+/* @media (orientation:landscape) and (max-width: 767px){ */
+/*@media only screen and (max-width : 465px) and (orientation: landscape) {
+	#controls {
+		visibility: hidden;
+	}
+}*/
 
 /* @media only screen 
    and (min-width : 321px) {
